# eqmarl

./: .gitignore  CITATION.bib  Dockerfile  LICENSE.md  README.md  cartpole_a2c_classical.ipynb  cartpole_ac.ipynb  cartpole_ac_eqmarl.ipynb  cartpole_ia2c_classical.ipynb  cartpole_jmapg_classical.ipynb  cartpole_jmapg_quantum.ipynb  cartpole_maa2c_classical.ipynb  cartpole_maa2c_quantum.ipynb  cartpole_mapg_classical.ipynb  cartpole_mapg_quantum.ipynb  cartpole_pg_classical.ipynb  cartpole_pg_quantum.ipynb  coingame_ac_eqmarl.ipynb  coingame_iac.ipynb  coingame_maa2c_classical.ipynb  coingame_maa2c_classical_small.ipynb  coingame_maa2c_quantum.ipynb  coingame_maa2c_quantum_newencoding.ipynb  coingame_maa2c_quantum_nnencode.ipynb  coingame_mapg_classical.ipynb  env-render-video.ipynb  eqqmix.ipynb  input_state_preparation.ipynb  measure_observables.ipynb  minigrid-LavaGap.ipynb  minigrid-eqmarl.ipynb  minigrid-fctde.ipynb  minigrid-qfctde.ipynb  minigrid-sctde.ipynb  minigrid.ipynb  pennylane.ipynb  poc.ipynb  proof.ipynb  proof.nb  pyproject.toml  (+8 more)
.devcontainer/: devcontainer.json
eqmarl/: __init__.py  agents.py  callbacks.py  circuits.py  controllers.py  experiment.py  layers.py  math.py  models.py  observables.py  ops.py  parameter_resolvers.py  policy.py  state_prep.py  tools.py  trainers.py  types.py
experiments/: cartpole_maa2c_mdp_eqmarl_noentanglement.yml  cartpole_maa2c_mdp_eqmarl_phi+.yml  cartpole_maa2c_mdp_eqmarl_phi-.yml  cartpole_maa2c_mdp_eqmarl_psi+.yml  cartpole_maa2c_mdp_eqmarl_psi-.yml  cartpole_maa2c_mdp_fctde.yml  cartpole_maa2c_mdp_qfctde.yml  cartpole_maa2c_mdp_sctde.yml  cartpole_maa2c_pomdp_eqmarl_noentanglement.yml  cartpole_maa2c_pomdp_eqmarl_phi+.yml  cartpole_maa2c_pomdp_eqmarl_phi-.yml  cartpole_maa2c_pomdp_eqmarl_psi+.yml  cartpole_maa2c_pomdp_eqmarl_psi-.yml  cartpole_maa2c_pomdp_fctde.yml  cartpole_maa2c_pomdp_qfctde.yml  cartpole_maa2c_pomdp_sctde.yml  coingame4_maa2c_classical_mdp.yml  (+92 more)
(+523 files in other folders)
