[project]
name = "eqmarl"
version = "1.0.0"
authors = [
    {name = "Alexander DeRieux", email="derieux@vt.edu"},
    {name = "Walid Saad", email="walids@vt.edu"},
]
requires-python = ">=3.9, <3.10" # >=3.7,<=3.9 required for tensorflow-quantum, but >=3.9 required for typing usage, so fixing ==3.9 here.
license = {text = "MIT"}
dynamic = ["dependencies"] # See section "tool.setuptools.dynamic".

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.setuptools.packages]
find = { exclude = ["figures*", "scripts*"] }  # Scanning implicit namespaces is active by default