[project]
name = "eqmarl"
version = "1.0.0"
authors = [
    {name = "Anonymous Authors"},
]
requires-python = ">=3.9, <3.12" # 3.9, 3.10, 3.11.
license = {text = "MIT"}
dynamic = ["dependencies"] # See section "tool.setuptools.dynamic".

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

[tool.setuptools.packages]
find = { exclude = ["figures*", "scripts*"] }  # Scanning implicit namespaces is active by default